src/test/ui/consts/const-extern-fn/const-extern-fn-min-const-fn.stderr
error[E0723]: unsizing casts are not allowed in const fn
  --> $DIR/const-extern-fn-min-const-fn.rs:3:48
   |
LL | const extern fn unsize(x: &[u8; 3]) -> &[u8] { x }
   |                                                ^
   |
   = note: see issue #57563 <https://github.com/rust-lang/rust/issues/57563> for more information
   = help: add `#![feature(const_fn)]` to the crate attributes to enable

error[E0723]: function pointers in const fn are unstable
  --> $DIR/const-extern-fn-min-const-fn.rs:5:41
   |
LL | const unsafe extern "C" fn closure() -> fn() { || {} }
   |                                         ^^^^
   |
   = note: see issue #57563 <https://github.com/rust-lang/rust/issues/57563> for more information
   = help: add `#![feature(const_fn)]` to the crate attributes to enable

error[E0723]: only int, `bool` and `char` operations are stable in const fn
  --> $DIR/const-extern-fn-min-const-fn.rs:7:38
   |
LL | const unsafe extern fn use_float() { 1.0 + 1.0; }
   |                                      ^^^^^^^^^
   |
   = note: see issue #57563 <https://github.com/rust-lang/rust/issues/57563> for more information
   = help: add `#![feature(const_fn)]` to the crate attributes to enable

error[E0723]: casting pointers to ints is unstable in const fn
  --> $DIR/const-extern-fn-min-const-fn.rs:9:48
   |
LL | const extern "C" fn ptr_cast(val: *const u8) { val as usize; }
   |                                                ^^^^^^^^^^^^
   |
   = note: see issue #57563 <https://github.com/rust-lang/rust/issues/57563> for more information
   = help: add `#![feature(const_fn)]` to the crate attributes to enable

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0723`.
